FullQa New/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Agency_URL_Instructions__c</fullName>
        <description>Instructions on how to access this form from the agency URL.</description>
        <label>Agency URL Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Website__c</fullName>
        <description>URL for the agency website where this form may be found.</description>
        <label>Agency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Beer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Form is used for beer filings.</description>
        <label>Beer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates form is used for direct ship filings.</description>
        <label>Direct Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <inlineHelpText>Please use the verbatim form name from the agency form.</inlineHelpText>
        <label>Form Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <description>Agency-assigned form number for identification.</description>
        <label>Form Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <description>Latest date when this form was reviewed by Compli.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MySearchFilterField1__c</fullName>
        <label>MySearchFilterField1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Rat</fullName>
                </value>
                <value>
                    <fullName>Elephant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates form is used for self distribution filings.</description>
        <label>Self Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spirits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Form is used for spirits filings.</description>
        <label>Spirits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State that the form is associated with, or FD for federal.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agency_rev_date__c</fullName>
        <description>Date of the latest version of this form supplied by the agency.</description>
        <inlineHelpText>Document the date when the current version of this form was uploaded.</inlineHelpText>
        <label>Agency Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates form is used for wholesale filings.</description>
        <label>Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Form is used for wine filings.</description>
        <label>Wine</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>General_File</fullName>
        <active>true</active>
        <label>General File</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Agency_Forms</fullName>
        <active>true</active>
        <label>Master Agency Forms</label>
    </recordTypes>
</CustomObject>